--- a/src/Syzygy/Syzygy.csproj
+++ b/src/Syzygy/Syzygy.csproj
@@ -46,6 +46,7 @@
     <Compile Include="GameState.cs" />
     <Compile Include="GameWindow.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Rendering\GeometryManager.cs" />
     <Compile Include="Rendering\RenderManager.cs" />
     <Compile Include="Rendering\ShaderManager.cs" />
     <Compile Include="Rendering\SurfaceManager.cs" />
