added free floating objects

--- a/src/Syzygy/Syzygy.csproj
+++ b/src/Syzygy/Syzygy.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Astronomy\Constants.cs" />
     <Compile Include="Astronomy\FixedBody.cs" />
+    <Compile Include="Astronomy\FreeObject.cs" />
     <Compile Include="Astronomy\IBody.cs" />
     <Compile Include="Astronomy\OrbitingBody.cs" />
     <Compile Include="GameObject.cs" />
