--- a/src/Syzygy/Syzygy.csproj
+++ b/src/Syzygy/Syzygy.csproj
@@ -57,6 +57,7 @@
     <Compile Include="GameGeneration\instructions\NewFixedBodyInstruction.cs" />
     <Compile Include="GameGeneration\SimpleGenerator.cs" />
     <Compile Include="GameManagement\handlers\Client\GenericClientGameHandler.cs" />
+    <Compile Include="GameGeneration\GameBuilder.cs" />
     <Compile Include="GameManagement\networking\LobbyMessageType.cs" />
     <Compile Include="GameManagement\networking\Player.cs" />
     <Compile Include="IdManager.cs" />
@@ -68,7 +69,7 @@
     <Compile Include="GameManagement\handlers\IngameGameHandler.cs" />
     <Compile Include="GameManagement\handlers\Client\LobbyGameHandler.cs" />
     <Compile Include="GameManagement\handlers\Server\LobbyGameHandler.cs" />
-    <Compile Include="GameManagement\handlers\SetupGameHandler.cs" />
+    <Compile Include="GameManagement\handlers\BuildGameHandler.cs" />
     <Compile Include="Game\Astronomy\Constants.cs" />
     <Compile Include="Game\Astronomy\FixedBody.cs" />
     <Compile Include="Game\Astronomy\FreeObject.cs" />
