--- a/src/Syzygy/Syzygy.csproj
+++ b/src/Syzygy/Syzygy.csproj
@@ -69,6 +69,7 @@
     <Compile Include="GameManagement\PlayerConnectionLookup.cs" />
     <Compile Include="DeletableObjectDictionary.cs" />
     <Compile Include="Game\Economy.cs" />
+    <Compile Include="Game\EconomyController.cs" />
     <Compile Include="Game\Player.cs" />
     <Compile Include="GameManagement\PlayerLookup.cs" />
     <Compile Include="IdManager.cs" />
