slight game behaviour creation refactor, removed collisions on client side

--- a/src/Syzygy/Syzygy.csproj
+++ b/src/Syzygy/Syzygy.csproj
@@ -71,23 +71,29 @@
     <Compile Include="GameManagement\networking\LobbyMessageType.cs" />
     <Compile Include="GameManagement\PlayerConnectionLookup.cs" />
     <Compile Include="DeletableObjectDictionary.cs" />
+    <Compile Include="Game\Astronomy\ClientCollisionHandler.cs" />
+    <Compile Include="Game\Behaviours\ClientBehaviourProvider.cs" />
     <Compile Include="Game\Economy.cs" />
     <Compile Include="Game\EconomyController.cs" />
+    <Compile Include="Game\Behaviours\GameBehaviourProvider.cs" />
+    <Compile Include="Game\Behaviours\ICollisionHandler.cs" />
     <Compile Include="Game\Player.cs" />
     <Compile Include="GameManagement\PlayerLookup.cs" />
+    <Compile Include="Game\Behaviours\ServerBehaviourProvider.cs" />
+    <Compile Include="Game\Behaviours\ServerCollisionHandler.cs" />
     <Compile Include="Game\SyncedCommands\BaseRequest.cs" />
-    <Compile Include="Game\SyncedCommands\ClientRequestHandler.cs" />
+    <Compile Include="Game\Behaviours\ClientRequestHandler.cs" />
     <Compile Include="Game\SyncedCommands\CommandReader.cs" />
     <Compile Include="Game\SyncedCommands\BaseCommand.cs" />
     <Compile Include="Game\SyncedCommands\CommandType.cs" />
     <Compile Include="Game\SyncedCommands\IRequest.cs" />
-    <Compile Include="Game\SyncedCommands\IRequestHandler.cs" />
+    <Compile Include="Game\Behaviours\IRequestHandler.cs" />
     <Compile Include="Game\SyncedCommands\ICommand.cs" />
-    <Compile Include="Game\PlayerController.cs" />
+    <Compile Include="Game\IPlayerController.cs" />
     <Compile Include="Game\SyncedCommands\RequestReader.cs" />
     <Compile Include="Game\SyncedCommands\RequestType.cs" />
     <Compile Include="Game\SyncedCommands\implementations\ShootDebugParticleFromPlanet.cs" />
-    <Compile Include="Game\SyncedCommands\ServerRequestHandler.cs" />
+    <Compile Include="Game\Behaviours\ServerRequestHandler.cs" />
     <Compile Include="Game\SyncedCommands\UnifiedRequestCommand.cs" />
     <Compile Include="IdManager.cs" />
     <Compile Include="NetworkHelpers.cs" />
